Changed gin Get Document handler to output an array.
